# COCO_object_detection

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
configs/: configs.yaml  dataset.yaml  model.yaml  train.yaml
notebooks/: eda.ipynb
src/: __init__.py
src/datasets/: __init__.py  coco_dataset.py  datamodule.py  dataset.py  transforms.py
src/inference/: __init__.py  predictor.py
src/metrics/: metrics.py
src/models/: __init__.py  bbox_regressor.py  build.py  model.py  models.py
src/models/detectors/: faster_rcnn.py
src/pipelines/: __init__.py  inference.py  train.py
src/training/: __init__.py  optimizer.py  scheduler.py  trainer.py
src/utils/: __init__.py  config.py  metrics.py  transform.py  visualization.py
tools/: extract_mini_coco.py
