[project]
name = "object-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "imutils>=0.5.4",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pycocotools>=2.0.11",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
